--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link text-light-emphasis" href="sm.html">Home</a>
+                    <a class="nav-link text-light-emphasis" href="index.html">Home</a>
                     <a class="nav-link" href="price.html">Price</a>
                     <a class="nav-link" href="aboutus.html">About us</a>
                     <a class="nav-link" href="contactus.html"> Contact us</a>
